--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -2,7 +2,6 @@
   "_display_name": "Ελληνικά",
   "about": {
     "description": "Η εφαρμογή {{applicationName}} διατίθεται από {{healthAuthorityName}}",
-    "emergency_contact": "Επικοινωνία έκτακτης ανάγκης",
     "operating_system_abbr": "Λειτουργικό σύστημα:",
     "version": "Έκδοση:"
   },
@@ -30,7 +29,8 @@
     "skip": "Παράλειψη",
     "something_went_wrong": "Κάτι πήγε στραβά",
     "start": "Εκκίνηση",
-    "submit": "Υποβολή"
+    "submit": "Υποβολή",
+    "success": "Επιτυχία"
   },
   "errors": {
     "description": "Προέκυψε σφάλμα. Φορτώστε ξανά την εφαρμογή.",
@@ -120,7 +120,6 @@
   },
   "home": {
     "bluetooth_info_body": "Το τηλέφωνό σας εντοπίζει τηλέφωνα άλλων χρηστών, με τους οποίους περνάτε χρόνο σε κοντινή απόσταση, με τη χρήση Bluetooth χαμηλής ενέργειας. Αυτό επιτρέπει στην εφαρμογή να καταγράφει στο ημερολόγιό σας καθημερινές συναντήσεις ανώνυμα, ακόμη και όταν δεν έχετε ανοιχτή την εφαρμογή στη συσκευή σας.",
-    "bluetooth_info_header": "Bluetooth",
     "bluetooth": {
       "all_services_on_subheader": "Η Εφαρμογή {{applicationName}} θα παραμείνει ενεργή μετά το κλείσιμο της εφαρμογής",
       "bluetooth_disabled_error_message": "Ενεργοποίηση Bluetooth στις Ρυθμίσεις της εφαρμογής",
@@ -140,12 +139,9 @@
     "fix": "Επιδιόρθωση προβλημάτων με {{technology}}",
     "get_more_info": "Λάβετε περισσότερες πληροφορίες με {{technology}}",
     "location_info_body_1": "Η τεχνολογία Ειδοποίησης έκθεσης χρησιμοποιεί σάρωση Bluetooth για να κατανοήσει ποιες συσκευές είναι κοντά η μια στην άλλη. Για να χρησιμοποιήσετε τη σάρωση Bluetooth σε όλα τα τηλέφωνα με Android 6.0 ή μεταγενέστερη έκδοση, η τοποθεσία σας πρέπει να είναι ενεργοποιημένη για όλες τις εφαρμογές, όχι μόνο για εφαρμογές που έχουν δημιουργηθεί με το Σύστημα ειδοποιήσεων έκθεσης.",
-    "location_info_header": "Τοποθεσία",
     "location_info_subheader_1": "Γιατί πρέπει να είναι ενεργοποιημένη η τοποθεσία μου;",
-    "open_settings": "Άνοιγμα Ρυθμίσεων",
     "proximity_tracing_info_body_1": "Αν τα smartphones με εγκατεστημένη την εφαρμογή είναι ενεργοποιημένα, έχουν ενεργοποιημένο το bluetooth και βρίσκονται κοντά το ένα στο άλλο για ένα χρονικό διάστημα, καταχωρείται στη συσκευή σας μια συνάντηση.",
     "proximity_tracing_info_body_2": "Σε περίπτωση συνάντησης, τα δεδομένα και οι πληροφορίες σας παραμένουν ανώνυμα. Η εφαρμογή δεν αποθηκεύει προσωπικά δεδομένα. Ανταλλάσσονται μόνο τυχαία αναγνωριστικά. Αυτά διαγράφονται εντός 14 ημερών.",
-    "proximity_tracing_info_header": "Ανίχνευση εγγύτητας",
     "proximity_tracing_info_subheader_1": "Πώς λειτουργεί ο εντοπισμός εγγύτητας;",
     "proximity_tracing_info_subheader_2": "Είναι τα δεδομένα μου ασφαλή;",
     "proximity_tracing": {
@@ -170,8 +166,7 @@
     "exposure": "Έκθεση",
     "exposure_history": "Ιστορικό Εκθέσεων",
     "home": "Αρχική",
-    "more_info": "Περισσότερες Πληροφορίες",
-    "symptom_history": "ελεγκτής συμπτωμάτων"
+    "more_info": "Περισσότερες Πληροφορίες"
   },
   "onboarding": {
     "activation_header_title": "Ρύθμιση εφαρμογής",
@@ -202,7 +197,6 @@
       "body_3": "Κατόπιν μιας θετικής διάγνωσης με COVID-19, οι χρήστες μπορούν να κοινοποιήσουν έναν κωδικό πρόσβασης στην {{applicationName}} για να επαληθεύσουν τη διάγνωσή τους. Τα πρόσφατα τυχαία αναγνωριστικά του τηλεφώνου τους επισημαίνονται και μεταφορτώνονται με ασφάλεια στον διακομιστή. Αυτή η διαδικασία επαλήθευσης βοηθά στην αποτροπή ψευδών θετικών αναφορών.",
       "body_4": "Εάν ένα αναγνωριστικό που έχει επισημανθεί ταιριάζει με ένα αναγνωριστικό που είναι αποθηκευμένο στο τηλέφωνό σας, αυτό υποδηλώνει ότι ενδέχεται να έχετε συναντήσει κάποιον που έχει διαγνωστεί θετικά με COVID-19. Αυτός είναι ο τρόπος με τον οποίο η {{applicationName}} μπορεί να καθορίσει εάν ενδέχεται να έχετε εκτεθεί στον ιό.",
       "body_5": "Εάν υπάρχει αντιστοιχία, η {{applicationName}} θα σας ειδοποιήσει και θα σας δώσει περαιτέρω οδηγίες από το τμήμα υγείας σας. \n\n Με αυτόν τον τρόπο η {{applicationName}} μπορεί να σας δώσει τη δυνατότητα να λαμβάνετε αποφάσεις σχετικά με την υγεία σας και να διατηρείτε την κοινότητά σας ασφαλή, χωρίς να γνωρίζει ποιος είστε ή πού ήσασταν.",
-      "header": "Πώς προστατεύουμε τα προσωπικά σας δεδομένα",
       "subheader_1": "Όταν ενεργοποιείτε την Ανίχνευση εγγύτητας, το τηλέφωνό σας επισημαίνεται με συχνά μεταβαλλόμενα, τυχαία αναγνωριστικά",
       "subheader_2": "Τηλέφωνα με ενεργοποιημένη ανίχνευση εγγύτητας ανταλλάζουν κωδικούς με άλλες συσκευές που συναντούν",
       "subheader_3": "Οι χρήστες που έχουν διαγνωστεί θετικά μπορούν να επιλέξουν να κοινοποιήσουν ανώνυμα την κατάσταση υγείας τους",
@@ -231,7 +225,6 @@
     "screen4_image_label": "Ένα άτομο που λαμβάνει ειδοποίηση στο τηλέφωνό του",
     "screen5_header": "Με την εφαρμογή, μπορείτε να βοηθήσετε στην επιβράδυνση της εξάπλωσης του COVID-19, να προστατεύσετε άλλους και να λάβετε βοήθεια απευθείας από ειδικούς στον τομέα της υγείας.",
     "screen5_image_label": "Ένα άτομο που μιλάει ψηφιακά σε έναν εμπειρογνώμονα υγείας",
-    "select_language": "Επιλογή γλώσσας",
     "step": "Βήμα {{currentStep}} από {{totalSteps}}",
     "terms_header_title": "Όροι χρήσης",
     "welcome_image_label": "Απεικόνιση ατόμων με μάσκες, συνδεδεμένες σαν κόμβους σε ένα δίκτυο."
@@ -336,7 +329,6 @@
     }
   },
   "settings": {
-    "delete_confirmation_header": "Είστε σίγουρος/η;",
     "here": "εδώ",
     "i_understand_and_consent": "Κατανοώ και συναινώ",
     "not_sharing_anonymized_data": "Χωρίς κοινή χρήση ανώνυμων δεδομένων",
@@ -349,18 +341,9 @@
     "you_are_sharing_data": "Μοιράζεστε ανώνυμα δεδομένα"
   },
   "symptom_history": {
-    "delete_entry": "Διαγραφή καταχώρησης",
-    "entry_deleted": "Η καταχώρηση διαγράφηκε",
     "errors": {
-      "adding_symptoms": "Λυπούμαστε, δεν ήταν δυνατή η καταγραφή των συμπτωμάτων σας",
-      "deleting_symptom_log": "Λυπούμαστε, δεν ήταν δυνατή η διαγραφή του αρχείου καταγραφής συμπτωμάτων",
       "updating_symptoms": "Λυπούμαστε, δεν ήταν δυνατή η ενημέρωση των συμπτωμάτων σας"
-    },
-    "log_symptoms": "Καταγράψτε συμπτώματα",
-    "no_symptom_history": "Δεν υπάρχει ιστορικό συμπτωμάτων",
-    "symptoms_saved": "Τα συμπτώματα αποθηκεύτηκαν!",
-    "symptoms_updated": "Τα συμπτώματα ενημερώθηκαν!",
-    "what_symptoms": "Ποια είναι τα συμπτώματα σας;"
+    }
   },
   "symptoms": {
     "body_aches": "Σωματικοί πόνοι",
