--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -20,8 +20,7 @@
     "why_did_i_get_an_en_para": "Recibirás una notificación de exposición cuando te hayas cruzado con una persona que más taerde haya recibido un diagnóstico confirmado o haya dado positivo en un test por COVID-19 siempre y cuando elija notificar al resto."
   },
   "home": {
-    "call_emergency_services": "Servicios de emergencia",
-    "open_settings": "Abrir Opciones de Configuración"
+    "call_emergency_services": "Servicios de emergencia"
   },
   "label": {
     "launch_enable_notif": "Permitir notificaciones",
