Update code input view for accessibility and UX on iOS

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,6 +59,7 @@
     "code_input_button_back": "Back",
     "code_input_button_cancel": "Cancel",
     "code_input_title_bluetooth": "Verify your diagnosis",
+    "code_input_placeholder": "Enter Code",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
