Allow verification codes of 6 to 16 alphanumeric chars
Why:
As a user, I would like to be able to input a verification code on the report positive test result flow that is between 6 and 16 alphanumeric characters. Right now, the input only accepts exactly 8 digits.

This commit:
- Updates the code input to take a minimum of 6 and a maximum of 16 characters.
- Updates the code input to only accept alphanumeric characters and show an error message if non-alphanumeric characters are used
- Changes the keyboard type for the code input to be the default keyboard
- Fixes some accessibility issues with the code input screen so that the keyboard does not cover the input

Co-Authored-By: Alejandro Dustet alejandro@thoughtbot.com

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,6 +59,7 @@
     "code_input_button_back": "Back",
     "code_input_button_cancel": "Cancel",
     "code_input_title_bluetooth": "Verify your diagnosis",
+    "code_input_placeholder": "Enter Code",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
@@ -71,7 +72,7 @@
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "error": {
       "invalid_code": "Try a different code",
-      "invalid_format": "Invalid format",
+      "invalid_format": "Codes may only contain numbers and letters",
       "network_connection_error": "There is no internet connection",
       "unknown_code_verification_error": "Try a different code",
       "verification_code_used": "Verification code has already been used"
