Remove Button component from AnonymizedDataConsentScreen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,7 @@
   "common": {
     "back": "Back",
     "close": "Close",
+    "close_screen": "Close screen",
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
