Remove Button component from ExposureDetail

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -105,7 +105,7 @@
       "ha_guidance_header": "What should I do?",
       "header": "Someone you were nearby has since tested positive for COVID-19.",
       "isolate": "Isolate",
-      "next_steps": "Next Steps",
+      "next_steps": "Next steps",
       "personalize_my_guidance": "Personalize my guidance",
       "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
       "speak_with_contact_tracer": "Speak with a contact tracer",
