Remove Button component
Why:
The complexity of maintaining a button component is out-weighting the benefits of the shared logic. We would like to remove it and maintain the logic of the states on the buttons closer to their usage.

This Commit:
- Replace button with styles on error screen
- Switch button for styles on most activation screens
- Replace button with styles on welcome screen
- Replace button with styles on callback form
- Replace button for styles on self assessment
- Replace button for styles on the affected user flow
- Replace button for styles on the how it works screen
- Replace button for styles on the consent for analytics screen
- Replace button for styles on the Exposure details screen
- Remove Button component

Co-authored-by: Alejandro Dustet <alejandro@thoughtbot.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,7 @@
   "common": {
     "back": "Back",
     "close": "Close",
+    "close_screen": "Close screen",
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
@@ -56,10 +57,8 @@
   },
   "export": {
     "code_input_body_bluetooth": "Enter your verification code",
-    "code_input_button_back": "Back",
-    "code_input_button_cancel": "Cancel",
-    "code_input_title_bluetooth": "Verify your diagnosis",
     "code_input_placeholder": "Enter Code",
+    "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
@@ -87,8 +86,8 @@
         "unknown": "Failed to submit the exposure data"
       },
       "no_op": {
-        "empty_exposure_keys_title": "No encounter logging data is available",
         "empty_exposure_keys": "It looks like you have no encounter logs on your device, please wait 24 hours to proceed if you recently reset your data. You may need to request a new verification code.",
+        "empty_exposure_keys_title": "No encounter logging data is available",
         "no_token_for_existing_keys": "Existing data was sent to the server. This usually means that this process was attempted previously from this device, but on a different application. You can communicate this to the authority that provided the verification code that was used. There were {{newKeysInserted}} new keys added.",
         "no_token_for_existing_keys_title": "Attempt to submit existing keys"
       }
@@ -104,7 +103,7 @@
       "ha_guidance_header": "What should I do?",
       "header": "Someone you were nearby has since tested positive for COVID-19.",
       "isolate": "Isolate",
-      "next_steps": "Next Steps",
+      "next_steps": "Next steps",
       "personalize_my_guidance": "Personalize my guidance",
       "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
       "speak_with_contact_tracer": "Speak with a contact tracer",
@@ -147,7 +146,6 @@
   "home": {
     "bluetooth_info_body": "Your phone detects other phones you spend time in close proximity with using Bluetooth Low Energy. This allows the app to log your log daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
-      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "bluetooth_disabled_error_message": "Go to the Settings app and enable Bluetooth to fix this error",
       "bluetooth_disabled_error_title": "Enable Bluetooth in Settings",
       "bluetooth_header": "Bluetooth",
@@ -158,7 +156,6 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Exposure Detection Off",
-      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
@@ -209,11 +206,11 @@
     "app_setup_incomplete_body": "{{applicationName}} requires Exposure Notifications and Bluetooth permissions to know when  and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "app_setup_incomplete_header": "App Setup Incomplete",
     "app_setup_incomplete_location_body": "{{applicationName}} requires Exposure Notifications, Bluetooth, and Location permissions to know when and where you have been exposed to COVID 19. You can authorize this in Settings.",
-    "bluetooth_alert_header": "Activate Bluetooth",
     "bluetooth_alert_body": "To use Bluetooth scanning, the device Bluetooth setting needs to be turned on.",
+    "bluetooth_alert_header": "Activate Bluetooth",
+    "bluetooth_body": "To use Bluetooth scanning, the device Bluetooth setting needs to be turned on.",
     "bluetooth_header": "Activate Bluetooth",
     "bluetooth_subheader": "Why do I need to turn on my phone's Bluetooth setting?",
-    "bluetooth_body": "To use Bluetooth scanning, the device Bluetooth setting needs to be turned on.",
     "eula": "End User Legal Agreement",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
     "location_alert_body": "To use Bluetooth scanning, the device location setting needs to be turned on.",
@@ -264,7 +261,6 @@
     "screen4_image_label": "A person getting a notification on their phone",
     "screen5_header": "With the app, you can help slow the spread of COVID-19, protect others, and get help directly from health experts.",
     "screen5_image_label": "A person talking to a health expert virtually",
-    "step": "Step {{currentStep}} of {{totalSteps}}",
     "terms_header_title": "Terms of use",
     "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network."
   },
