--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -220,7 +220,6 @@
     "location_subheader": "Why do I need to turn on my phone's location setting?",
     "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
     "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
-    "notification_header": "Get notified if you may have been exposed",
     "notification_subheader1": "When will I get notified?",
     "notification_subheader2": "How does it work?",
     "notification_subheader3": "This app does not protect you from COVID-19 infection.",
@@ -246,7 +245,6 @@
     "proximity_tracing_subheader1": "How does it work?",
     "proximity_tracing_subheader2": "Is my data secure?",
     "proximity_tracing_subheader3": "This app does not protect you from COVID-19 infection.",
-    "screen_5_button": "Get started",
     "screen1_button": "How does it work?",
     "screen1_header": "Together, we can slow the spread of COVID-19.",
     "screen1_image_label": "Two people high fiving each other",
@@ -256,11 +254,9 @@
     "screen3_button": "What if I’m exposed?",
     "screen3_header": "No personally identifiable information ever leaves your phone.",
     "screen3_image_label": "A person in front of a locked phone",
-    "screen4_button": "What if I get sick?",
+    "screen4_button": "Get started",
     "screen4_header": "The app will notify you if you may have been exposed to COVID 19",
     "screen4_image_label": "A person getting a notification on their phone",
-    "screen5_header": "With the app, you can help slow the spread of COVID-19, protect others, and get help directly from health experts.",
-    "screen5_image_label": "A person talking to a health expert virtually",
     "terms_header_title": "Terms of use",
     "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network."
   },
