--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,8 +13,7 @@
     "request_a_call": "Request a call from a contact tracer",
     "success_body": "Our contact tracers are working hard to keep you and your community safe. The {{healthAuthorityName}} has received your request for a call back. An expert will contact you within 24 hours.",
     "success_got_it": "Got it",
-    "success_header": "You're in the queue",
-    "success_requested": "Call Back Requested"
+    "success_header": "You're in the queue"
   },
   "common": {
     "back": "Back",
@@ -246,7 +245,6 @@
     "proximity_tracing_subheader1": "How does it work?",
     "proximity_tracing_subheader2": "Is my data secure?",
     "proximity_tracing_subheader3": "This app does not protect you from COVID-19 infection.",
-    "screen_5_button": "Get started",
     "screen1_button": "How does it work?",
     "screen1_header": "Together, we can slow the spread of COVID-19.",
     "screen1_image_label": "Two people high fiving each other",
@@ -256,22 +254,17 @@
     "screen3_button": "What if I’m exposed?",
     "screen3_header": "No personally identifiable information ever leaves your phone.",
     "screen3_image_label": "A person in front of a locked phone",
-    "screen4_button": "What if I get sick?",
+    "screen4_button": "Get started",
     "screen4_header": "The app will notify you if you may have been exposed to COVID 19",
     "screen4_image_label": "A person getting a notification on their phone",
-    "screen5_header": "With the app, you can help slow the spread of COVID-19, protect others, and get help directly from health experts.",
-    "screen5_image_label": "A person talking to a health expert virtually",
     "terms_header_title": "Terms of use",
     "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network."
   },
   "screen_titles": {
     "bluetooth": "Bluetooth",
-    "callback": "Request call",
-    "debug": "Debug",
     "exposure_history": "Exposure History",
     "exposure_notifications": "Exposure Notifications",
     "exposure_scanning": "Exposure Detection",
-    "exposures": "Exposures",
     "home": "Dashboard",
     "how_the_app_works": "How the app works",
     "legal": "Legal",
